docs(v0.4.1): T6 fleet real-artifact rerun receipt (HeMan + Mario + Luigi)
Follow-up to PR #71 (static-classification receipt). Same day, same
commit (11d1a70), but this run distributes the 14 wild-corpus builds
across a 3-host fleet with real SCM clones + real docker maven via
the AN5-3d agent overlay — producing the real-artifact bytes number
paired with v0.3.3's 7.4 GB.

Fleet topology:
  HeMan (32c/56G)  → activemq, camel, jdt-core, jkube         (4 builds)
  Mario (12c/30G)  → camel-quarkus, cxf, maven, zookeeper,
                     epsilon                                    (5 builds)
  Luigi (56c/123G) → cassandra, hbase, streampipes,
                     hibernate-{orm,search}                     (5 builds)

Each box ran its own v0.4.1-rc uberjar booted with ANVIL_DB_PATH
isolated under /tmp/anvil-v041/data/anvil.db, wild-corpus-agents.edn
overlay loaded, 5 leapfrog flags ON. Production /opt/anvil/anvil.jar
(:8765 dogfood) NOT touched.

Results:
  - 14/14 builds terminal, 0 crashes, 0 silent SUCCESS
  - 1,942 real jars on disk, 754 MB across 3 hosts
  - 47 min wall clock (vs ~90 min serial estimate)
  - First-ever hbase + cassandra real runs
  - Every classification matches v0.3.3 verdict family

What this proves about v0.4.1:
  - End-to-end fleet works (3 daemons, 3 boxes, 3 docker fleets, no
    races)
  - T3 + T4 stay dormant on flag-disabled paths in real runs
  - AN5-3d docker fleet path still ships (chengis-core DockerBackend
    ran reliably across all 3 boxes)

Honest gaps surfaced (filed for v0.4.2/v0.5):
  - Orchestrator polling bug (uses /1 not latest build); snapshot
    tally compensates by walking workspaces
  - Mario load-imbalance (load=28 on 12c while Luigi sat at 0.38);
    default :anvil.queue/workers needs auto-scale + harness needs
    CPU-weighted shard
  - Synthesized-Jenkinsfile build-tool detection: cassandra is Ant
    not Maven, fallback ran mvn package || true → :success with 0
    artifacts. New :no-artifacts-produced honest cl